--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "serve": "^14.2.5",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
