--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "serve -s dist"
+    "start": "serve -s dist",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.4.0",
