--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite index.html.dev",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "start": "serve -s dist",
