--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "serve -s dist",
-    "postinstall": "npm run build"
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.4.0",
